kustomizations/streaming/apps/jellyfin/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: jellyfin
  annotations:
    tailscale.com/expose: "true"
  labels:
    app: jellyfin
    app.kubernetes.io/name: jellyfin
    app.kubernetes.io/part-of: streaming-stack
spec:
  selector:
    app: jellyfin
  ports:
  - name: http
    port: 8096
    targetPort: 8096
---
apiVersion: v1
kind: Service
metadata:
  name: jellyfin-lb
  annotations:
    external-dns.alpha.kubernetes.io/hostname: habiflix.lan
  labels:
    type: LoadBalancer
spec:
  type: LoadBalancer
  loadBalancerIP: 192.168.1.40
  selector:
    app: jellyfin
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 8096
  - name: udp
    protocol: UDP
    port: 7359
    targetPort: 7359
