kustomizations/streaming/apps/jellyfin/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jellyfin
spec:
  ingressClassName: cloudflare-tunnel
  rules:
  - host: habiflix.citocafecito.work
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: jellyfin
              port:
                number: 8096
